k8s/gateway-api/manifest/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-https
  namespace: gateway-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: '*.labo.daylight55.com'
    networking.gke.io/certmap: daylight-labo-certificate-map
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
